index.css
/* ... */
.svgbox img{
    width:100%; 
    height:110%;
    position: relative;
        top: -30px;
    /* padding-left: 5rem; */
}



button {
margin-top: 2rem;
display: inline-block;
outline: 0;
border: 0;
cursor: pointer;
border-radius: 0.5rem;
padding: 14px 15px 16px;
/* font-size: 18px; */
/* font-weight: 400; */
letter-spacing: 2px;
line-height: 1.3;
transition: transform 200ms,background 200ms;
/* background: transparent; */
background-color: #ac29fe;

color: #fff;
/* color: #000000; */
/* box-shadow: 0 0 0 3px #ac29fe inset; */
box-shadow: 0 0 80px rgba(200, 138, 209, 0.976), 0 0 32px rgb(173, 125, 202);

}

button:hover{
background-color: #dba5fc;
box-shadow: 0 0 80px rgba(172, 83, 186, 0.976), 0 0 32px rgb(148, 94, 182);

color: #000;
    /* transform: translateY(-2px); */
    transition: color .15s ease-in,background-color .15s ease-in,border-color .15s ease-in,box-shadow .15s ease-in;
}





.bigbox2{
    /* display: flex; */
    /* position: absolute;  */
    width: 90vw;
    height: 100vh;
    /* background-color:yellow; */
    margin: 10px auto;
    /* padding-top: 2rem; */
}

.innerbox2{
    /* position: absolute; */
    display: flex; 
    width: 90%;
    height: 90%;
    /* background-color:black; */
    margin: 0 auto;
    /* padding: 5px auto; */
}

.svgbox2{
    flex: 2;
    /* background-color:brown; */
    margin: 0 auto;

    background-image: url("svg\ files/Global BLockchain network.svg");
    z-index: -1;
    background-repeat: no-repeat;
    position:relative;
    right: 70px;
    flex: 2;
    margin: 0 auto;
}

.textbox2{
    flex: 2;
    /* background-color:lime; */
    margin: 0 auto;
}
.textbox2 h1{
    font-family: 'Montserrat', sans-serif;
    font-weight: 900;
    font-size: 3rem;
    line-height: 1;
    padding-top: 45px;
    text-shadow: 0 0 80px rgba(200, 138, 209, 0.976), 0 0 32px rgb(173, 125, 202);
    padding: 50px 50px;
    /* background-color:blue; */
    font-size: 2.5rem;
    /* font-weight: 500; */
}

.textbox2 h4{
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    /* margin-top: 2rem; */
    padding: 0px 50px;
    text-shadow: 0 0 80px rgba(200, 138, 209, 0.976), 0 0 32px rgb(173, 125, 202);
}

.div1{
    display: flex;
    align-items:center;
    text-align: center;
    justify-content: center;
    width: 90vw;
    height: 70vh;
    /* background-color:brown; */
    margin: 10px auto;
}

.bigger-tools{
    flex: 1.5;
    width: 80vw;
    height: 90%;
    /* background-color:yellow; */
    margin: 10px auto;
    /* padding-top: 2rem; */
}

.bigger-tools h1{
    font-family: 'Montserrat', sans-serif;
  /* font-family: 'Nunito', sans-serif; */
    /* font-family: arial; */
    font-weight: 900;
    font-size: 3rem;
    line-height: 1;
    text-align: left;
    padding-top: 45px;
    margin: 1rem 0.5rem;
    /* background-color:blue; */
    text-shadow: 0 0 80px rgba(200, 138, 209, 0.976), 0 0 32px rgb(173, 125, 202);

    /* font-size: 2.5rem; */
    /* font-weight: 500; */
}

.bigger-tools h4{
    line-height: 1;
    margin: 0rem .5rem;
    text-align: left;
    /* text-shadow: 0 0 80px rgba(2, 27, 61, 0.976), 0 0 32px rgb(2, 26, 85); */
    text-shadow: 0 0 80px rgba(200, 138, 209, 0.976), 0 0 32px rgb(173, 125, 202);
    /* margin-right: 7rem; */
    /* padding-top: 45px; */
}

.inner-tools{
    padding-left: 7rem;
    flex: 2.5;
    /* background-color: #00ffaa; */
    height: 90%;
    
}

.tools1{
    display: flex;
    gap: 1.8rem;
}

.tools2{
    display: flex;
    margin-top: 1.9rem;
    gap: 1.9rem;
}

.svgtools{
    width: 11.5rem;
    height: 11rem;
    background-color: #00000080;
    border-radius: 5px;
    /* text-shadow: 0 0 80px rgba(2, 27, 61, 0.976), 0 0 32px rgb(2, 26, 85); */
}

.carouselbox{
    width: 90vw;
    height: 50vh;
    /* background-color:greenyellow; */
    margin: 0 auto;
    margin-top: 2rem;
    display: flex; 
    align-items: center;
    justify-content: center;
}

.carousel{
    /* position: absolute; */
    display: flex; 
    align-items:center;
    justify-content: center;
    width: 95%;
    height: 98%;
    /* background-color:black; */
    margin: 0 auto;
    /* padding: 5px auto; */
}

.carouselcard{
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items:center;
    /* gap: 1.5rem; */
    margin: 0 1rem;
    /* flex: 2; */
    /* background-color:lime; */
    /* margin: 0 auto; */
    /* width: 95%; */
    height: 98%;
    /* background-color:violet; */
    outline: 1px solid #00ffaa;
    border-radius: 20px;
}

.carouselsvg img{
    /* flex-direction: column; */
    /* color: #ac29fe; */
    width: 250px;
    height: 140px;
    /* background-color: #000; */
    /* height: fit-content; */
    /* cursor: pointer; */
}

.carouselcard h3{
    text-align: justify;
    margin: 1rem 0;
}

.carouselcard p{
    text-align: center;
    margin:0 1rem;

}




.sponsorDiv{
    width: 70vw;
    height: 60vh;
    /* background-color:purple; */
    /* padding-top: 2rem;    */
    margin: 2rem auto 25rem;
    display: flex; 
    flex-direction: column; 
    align-items: center;
    justify-content: center;
    padding-bottom: 2rem;
    outline: 1px solid limegreen !important;
}

.sponsorDiv h2{
    margin: 2rem;
}

.sponsors{
    display: flex;
    flex: 1.3;
    align-items:center;
    justify-content: center;
    width: 75%;
    height: 95%;
    /* background-color:black; */
    margin: 0 auto;
    /* padding: 5px auto; */
}

.projects{
    display: flex;
    align-items:center;
    justify-content: center;
    flex-direction: column;
    /* flex:1.25; */
    width: 10rem;
    height: 80%;
    /* background-color:blue; */
}

/* .projects2{
    width: 10rem;
    align-items:center;
    justify-content: center;
    height: 100%;
    background-color:brown;
} */
/* ... */

